# voxelart

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  utils.rs  voxel.rs
