[package]
name = "voxelart"
version = "0.0.1"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17.0"
pollster = "0.3.0"
bytemuck = {version = "1.13.1", features = ["derive"]}
anyhow = "1.0.75"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.release]
strip = true
opt-level = "z"
lto = true



